# zrv32

./: .gitignore  CMakeLists.txt  README.md
include/: cpu.hpp  hypercalls.hpp  instruction.hpp  isa.hpp  macros.hpp  pow.hpp
include/instructions/: m_extension.hpp
src/: cpu.cpp  main.cpp
src/hypercalls/: exit.cpp  get_stdin.cpp  memory.cpp  memset.cpp  putc.cpp  raylib.cpp
src/instructions/: add_sub_sll_slt_sltu_xor_srl_sra_or_and.cpp  addi_slti_sltiu_xori_ori_andi_slli_srli_srai.cpp  auipc.cpp  branch.cpp  f_extension.cpp  jal_jalr.cpp  lb_lh_lw_lbu_lhu.cpp  lui.cpp  m_extension.cpp  sb_sh_sw.cpp
test/: Makefile  crt0.s  linker.ld  test.c
